src/test/deca/codegen/valid/created/cast_int_float.deca
// Description :
//		Programme pour tester le cast entre int et float
//
// Resultats :
//		Ok

{
int a;
float b = 2.5;
a = (int)(b);
b = (float)(a);
}