src/test/deca/codegen/invalid/created/debordement_flottant.deca
// Description :
//		Programme pour tester le debordement de flottant
//
// Resultats :
//		Erreur de compilation
//		debordement_flottant


{
float x = 20;
x = x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x*x+1;
print(x);
}